update java 17 && metrics